# Babel

./: .gitignore  CMakeLists.txt  Protocol.txt  conanfile.txt
client/include/: Client.hpp
client/include/audio/: Audio.hpp  CircBuffer.hpp  Opus.hpp  PAExcept.hpp  PAudio.hpp
client/include/gui/: Add.hpp  Calling.hpp  ConnectionLost.hpp  Incoming.hpp  Login.hpp  MainWindow.hpp  Menu.hpp  Register.hpp  Request.hpp
client/include/network/: TCPNetwork.hpp  UDPNetwork.hpp
client/src/: Client.cpp  main.cpp
client/src/audio/: Audio.cpp  CircBuffer.cpp  Opus.cpp  PAExcept.cpp  PAudio.cpp
client/src/gui/: Add.cpp  Calling.cpp  ConnectionLost.cpp  Incoming.cpp  Login.cpp  MainWindow.cpp  Menu.cpp  Register.cpp  Request.cpp
client/src/network/: TCPNetwork.cpp  UDPNetwork.cpp
common/include/: Server.hpp
common/include/network/: INetwork.hpp  Protocol.hpp
common/include/network/packets/: APacket.hpp  PacketAuth.hpp  PacketCall.hpp  PacketData.hpp  PacketFactory.hpp  PacketFriend.hpp  PacketManager.hpp
common/src/network/packets/: PacketManager.cpp
server/include/: Server.hpp
server/include/db/: IDataBase.hpp  SQLite.hpp
server/include/network/: NetworkClient.hpp  NetworkServer.hpp
server/src/: Server.cpp  main.cpp
server/src/db/: SQLite.cpp
server/src/network/: NetworkClient.cpp  NetworkServer.cpp
